@@ -1,3 +1,10 @@
+
+2011-12-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	Avoid SIGPIPE if possible.
+	* configure.ac: Detect MSG_NOSIGNAL and EPIPE
+	src/lib/sockio.s: Use them.
+
 2011-12-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	Support using gmp with Closure CL.
@@ -568,7 +575,7 @@
 
 2011-06-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
-	* src/algebra/boo-nilcat.spad: Add SemiRing i SemiRng.
+	* src/algebra/boo-nilcat.spad: Add SemiRing and SemiRng.
 
 2011-06-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
